--- a/fdgs_background.html
+++ b/fdgs_background.html
@@ -6,6 +6,7 @@
 -->
 <html>
   <head>
+  	<script src="jquery-1.7.2.min.js"></script>
     <script src="background.js"></script>
   </head>
   <body>
