Improving options page...added ability to disable Kindle import, now use Local Storage for local constants (base domain, caching, logging, etc.)

--- a/options.html
+++ b/options.html
@@ -1,54 +1,28 @@
 <html>
-<head><title>Findings Extension Options</title></head>
+  <head>
+      <title>Findings Extension Options</title>
+  </head>
 
-<style>
-  #status { color: red;font-size: 18px; }
-  #options { position: relative; margin: 20px auto; width: 500px; }
-</style>
-<script type="text/javascript">
-// Saves options to localStorage.
-function save_options() {
-  var checkit = document.getElementById("isDev");
-  var domain = document.getElementById("devDomain");
-  var status = document.getElementById("status");
-  var badgeText = "";
+  <link rel="stylesheet" href="options.css" type="text/css">
 
-  localStorage["isDev"] = checkit.checked;
-  localStorage["devDomain"] = domain.value;
+  <script src="jquery-1.7.2.min.js"></script>
+  <script type="text/javascript" src="options.js"></script>
 
-  status.innerHTML = "Saved!";
+  <body>
+    <div id="options">
+      <h1>Findings.com Extension Options</h1>
+      
+      <ul id="optionsList">
+        <li>
+          <label for="fdgs_username">Login to Findings</label><br />
+          <input type="text" id="fdgs_username" value="" size="30" placeholder="Findings username"> username<br />
+          <input type="password" id="fdgs_username" value="" size="30" placeholder="Findings password"> password<br />
+          <button id="fdgs_login">login</button>
+        </li>
 
-  if(eval(localStorage['isDev'])) {
-    badgeText = "DEV!";
-  } else {
-    badgeText = "";
-  }
-
-  chrome.browserAction.setBadgeText({"text": badgeText});
-
-  setTimeout(function() { status.innerHTML = "";}, 750);
-}
-
-// Restores select box state to saved value from localStorage.
-function restore_options() {
-  var checkit = document.getElementById("isDev");
-  var domain = document.getElementById("devDomain");
-
-  var isDev = eval(localStorage["isDev"]) || false;
-  var devDomain = localStorage["devDomain"] || "dev.findings.com";
-
-  domain.value = devDomain;
-  checkit.checked = isDev;
-}
-
-</script>
-<body onload="restore_options()">
-<div id="options">
-  <h1>Findings.com Extension Options</h1>
-  
-  <input type="checkbox" id="isDev" value="1" onClick="save_options()"> Put me in dev mode (points to <input type="text" id="devDomain" name="devDomain" value="" size="30" onKeyUp="save_options()">)
-
-  <div id="status" style=""></div>
-</div>
-</body>
+        <li><input type="checkbox" id="isDev" value="1"> Put me in dev mode (points to <input type="text" id="devDomain" name="devDomain" value="" size="30" onKeyUp="opt.save()">)</li>
+        <li><input type="checkbox" id="doKindleImport" value="1"> Enable Kindle Import</li>
+      </ul>
+    </div>
+  </body>
 </html>
