--- a/fdgs_background.html
+++ b/fdgs_background.html
@@ -8,7 +8,7 @@
   <head>
   	<script src="jquery-1.7.2.min.js"></script>
   	<script src="kindle_import.js"></script>
-    <script src="background.js"></script>
+    <script src="fdgs_background.js"></script>
   </head>
   <body>
   </body>
