--- a/options.html
+++ b/options.html
@@ -24,14 +24,14 @@
             <button id="fdgs_login">login</button>
           </div>
         </li>
-        <li><input type="checkbox" id="isDev" value="1"> Put me in dev mode (points to <input type="text" id="devDomain" name="devDomain" value="" size="30" onKeyUp="opt.save()">)</li>
+        <li><input type="checkbox" id="isDev" value="1" checked="false"> Put me in dev mode (points to <input type="text" id="devDomain" name="devDomain" value="" size="30" onKeyUp="opt.save()">)</li>
       </ul>
     </div>
 
     <div class="amazon options">
       <h2>Amazon Options</h2>
       <ul class="optionsList">
-        <li><input type="checkbox" id="doKindleImport" value="1"> Enable Kindle Import</li>
+        <li><input type="checkbox" id="doKindleImport" value="1" checked="false"> Enable Kindle Import</li>
         <li id="amazon_import_options">
           <div id="amazon_checking_login" class="visible">Checking Amazon login status...</div>
 
@@ -47,7 +47,7 @@
             <select id="amazon_import_interval_disabled" class="hidden"><option value="">Importing must be enabled</option></select>
 
             <div id="amazon_notifications">
-              <input type="checkbox" id="amazon_notifications_enabled"> Notify me when my highlights have been imported (not implemented)
+              <input type="checkbox" id="amazon_notifications_enabled" checked="true"> Notify me when my highlights have been imported (not implemented)
             </div>
           </div>
 
