Moved login checks into background page context, Kindle import now checks for valid logins and whether it's enabled in the settings.  Next up...put it in an interval

--- a/options.html
+++ b/options.html
@@ -44,7 +44,7 @@
                 <option value="1">Every hour</option>
                 <option value=".017">Every minute</option>
             </select>
-            <select id="amazon_import_interval_disabled" class="hidden"><option value="">Importing must be enabled</option></select>
+            <select id="amazon_import_interval_disabled" class="hidden"><option value="">Importing must be enabled</option></select> (not implemented)
 
             <div id="amazon_notifications">
               <input type="checkbox" id="amazon_notifications_enabled" checked="true"> Notify me when my highlights have been imported (not implemented)
