Import interval is now working! - Added a ping to kindle.amazon.com every 5 minutes to attempt to keep user logged in. - Interval selector on options page now properly selects an interval to import - Import interval is created on startup, and is updated when Kindle import goes from disabled to enabled - Import interval is automatically updated when the interval is changed on the options page

--- a/options.html
+++ b/options.html
@@ -37,6 +37,7 @@
 
           <div id="amazon_logged_in" class="hidden">
             Import my highlights <select id="amazon_import_interval_enabled">
+                <option value="-1">Never</option>
                 <option value="720">Once a month</option>
                 <option value="168">Once a week</option>
                 <option value="24" selected>Once a day</option>
