Fixed a bug where default settings weren't being set properly, added desktop notification setting and am successfully showing some notifications.

--- a/options.html
+++ b/options.html
@@ -49,7 +49,9 @@
             <select id="amazon_import_interval_disabled" class="hidden"><option value="">Importing must be enabled</option></select>
 
             <div id="amazon_notifications">
-              <input type="checkbox" id="amazon_notifications_enabled" checked="true"> Notify me when my highlights have been imported (not implemented)
+              <ul>
+                <li><input type="checkbox" id="amazon_desktop_notifications_enabled" checked="true"> Notify me when my highlights have been imported</li>
+                <li><input type="checkbox" id="amazon_email_notifications_enabled" checked="true"> Email me when my highlights have been imported (not implemented)</li>
             </div>
           </div>
 
