--- a/notify_kindle_import_failed_amazon_login.html
+++ b/notify_kindle_import_failed_amazon_login.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Import success!</title>
+		<link rel="stylesheet" href="notifications.css" type="text/css">
 		<script>		
 		var notice = {
 			notification_timeout: 10000,
@@ -28,6 +29,6 @@
 		</script>
 	</head>
 	<body>
-		Please <a href="https://kindle.amazon.com" target="_blank">login to Amazon</a> to beging importing your Kindle highlights into Findings.
+		<div id="message">Please <a href="https://kindle.amazon.com" target="_blank">login to Amazon</a> to begin importing your Kindle highlights into Findings.</div>
 	</body>
 </html>
