--- a/notify_kindle_import_failed_findings_login.html
+++ b/notify_kindle_import_failed_findings_login.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Import success!</title>
+
+		<link rel="stylesheet" href="notifications.css" type="text/css">
+
 		<script>		
 		var notice = {
 			notification_timeout: 10000,
@@ -38,6 +41,6 @@
 		</script>
 	</head>
 	<body>
-		Please <a href="#" id="optionButton">login to Findings</a> to beging importing your Kindle highlights.
+		<div id="message">Please <a href="#" id="optionButton">login to Findings</a> to begin importing your Kindle highlights.</div>
 	</body>
 </html>
