Import interval now respects interval and last import date (not based on browser launch time but actual last import date)

--- a/options.html
+++ b/options.html
@@ -32,7 +32,7 @@
     <div class="amazon options">
       <h2>Amazon Options</h2>
       <ul class="optionsList">
-        <li><input type="checkbox" id="doKindleImport" value="1" checked="false"> Enable Kindle Import <span id="amazon_checking_login" class="visible">Checking login status...</span>
+        <li><input type="checkbox" id="doKindleImport" value="1" checked="true"> Enable Kindle Import <span id="amazon_checking_login" class="visible">Checking login status...</span>
         <div id="lastImport">Last import: <span id="lastImportDate"></span></div></li>
         <li id="amazon_import_options">
           
