added an "import now" button to the options page, changed the working icon to simply be an inverted version of the icon.

--- a/options.html
+++ b/options.html
@@ -52,6 +52,8 @@
                 <option value="1">Every hour</option>
                 <option value=".017">Every minute</option>
             </select>
+            <button id="import_now">import now</button>
+            
             <ul>
               <li><input type="checkbox" id="amazon_desktop_notifications_enabled" checked="true"> Notify me when my highlights have been imported</li>
               <li><input type="checkbox" id="amazon_email_notifications_enabled" checked="true"> Email me when my highlights have been imported (not implemented)</li>
