--- a/options.html
+++ b/options.html
@@ -56,7 +56,7 @@
             
             <ul>
               <li><input type="checkbox" id="amazon_desktop_notifications_enabled" checked="true"> Notify me when my highlights have been imported</li>
-              <li><input type="checkbox" id="amazon_email_notifications_enabled" checked="true"> Email me when my highlights have been imported (not implemented)</li>
+              <li><input type="checkbox" id="amazon_email_notifications_enabled" checked="true"> Email me when my highlights have been imported</li>
             </ul>
           </div>
 
