Better failed import attempt notification handling.

--- a/notify_kindle_import_failed_amazon_login.html
+++ b/notify_kindle_import_failed_amazon_login.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="notifications.css" type="text/css">
 		<script>		
 		var notice = {
-			notification_timeout: 10000,
+			notification_timeout: 600000, // leave the login notice up for an hour in case the user stepped away
 			closer: {},
 			bkg: {},
 
