--- a/notify_kindle_import_failed_findings_login.html
+++ b/notify_kindle_import_failed_findings_login.html
@@ -5,9 +5,9 @@
 
 		<link rel="stylesheet" href="notifications.css" type="text/css">
 
-		<script>		
+		<script>
 		var notice = {
-			notification_timeout: 10000,
+			notification_timeout: 600000, // leave the login notice up for an hour in case the user stepped away
 			closer: {},
 			bkg: {},
 
