Works like the Django site, plus other new stuff - Kindle import works similarly to the new bookmarklet (i.e. utilizes the Amazon next_book URL directly) - The login form in the extension's options is now an iFrame pointing to the site's login form - Update logos and stuff

--- a/options.html
+++ b/options.html
@@ -15,15 +15,7 @@
       <h2>Findings Options</h2>
       <ul class="optionsList">
         <li id="fdgs_login_status">
-          <div class="fdgs_logged_in hidden">
-            You are logged into Findings as user <span id="fdgs_username_display"></span>. <button id="fdgs_logout">logout</button>
-          </div>
-          <div class="fdgs_logged_out">
-            <label for="fdgs_username">Login to Findings</label><br />
-            <input type="text" id="fdgs_username" value="" size="30" placeholder="Findings username"> username<br />
-            <input type="password" id="fdgs_password" value="" size="30" placeholder="Findings password"> password<br />
-            <button id="fdgs_login">login</button><span id="login_msg"></span>
-          </div>
+          <iframe id="loginframe" src=""></iframe>
         </li>
         <li class="devopt"><input type="checkbox" id="isDev" value="1" checked="false"> Put me in dev mode (points to <input type="text" id="devDomain" name="devDomain" value="" size="30" onKeyUp="opt.save()">)</li>
       </ul>
@@ -32,7 +24,7 @@
     <div class="amazon options">
       <h2>Amazon Options</h2>
       <ul class="optionsList">
-        <li><input type="checkbox" id="doKindleImport" value="1" checked="true"> Enable Kindle Import <span id="amazon_checking_login" class="visible">Checking login status...</span>
+        <li><input type="checkbox" id="doKindleImport" value="1" checked="true"> Enable Kindle Import <span id="amazon_checking_login">Checking login status...</span>
         <div id="lastImport">Last import: <span id="lastImportDate"></span></div></li>
         <li id="amazon_import_options">
           <div id="findings_logged_out" class="hidden">
