Now provide user feedback when import is initiated manually.  Also, much better logging.

--- a/options.html
+++ b/options.html
@@ -43,8 +43,8 @@
             <button id="import_now">import now</button>
             
             <ul>
-              <li><input type="checkbox" id="amazon_desktop_notifications_enabled" checked="true"> Notify me when my highlights have been imported</li>
-              <li><input type="checkbox" id="amazon_email_notifications_enabled" checked="true"> Email me when my highlights have been imported</li>
+              <li><input type="checkbox" id="amazon_desktop_notifications_enabled" checked=""> Notify me when my highlights have been imported</li>
+              <li><input type="checkbox" id="amazon_email_notifications_enabled" checked=""> Email me when my highlights have been imported</li>
             </ul>
           </div>
 
