starting the gut

--- a/options.html
+++ b/options.html
@@ -1,61 +1,31 @@
 <html>
-  <head>
-      <title>Findings Extension Options</title>
-  </head>
-
-  <link rel="stylesheet" href="options.css" type="text/css">
-
-  <script src="jquery-1.7.2.min.js"></script>
-  <script type="text/javascript" src="options.js"></script>
-
-  <body>
-    <div id="header"><h1>Chrome Extension Options</h1></div>
-
-    <div class="options findings">
-      <h2>Findings Options</h2>
-      <ul class="optionsList">
-        <li class="devopt"><input type="checkbox" id="isDev" value="1" checked="false"> Put me in dev mode (points to <input type="text" id="devDomain" name="devDomain" value="" size="30" onKeyUp="opt.save()">)</li>
-
-        <li id="fdgs_login_status">
-          <iframe id="loginframe" src=""></iframe>
-        </li>
-        <li id="fdgs_settings">
-          <iframe id="settingsframe" src=""></iframe>
-        </li>
-      </ul>
-    </div>
-
-    <div class="options amazon">
-      <h2>Amazon Background Import</h2>
-      <ul class="optionsList">
-        <li><input type="checkbox" id="doKindleImport" value="1" checked="true"> Enable Kindle Import <span id="amazon_checking_login">Checking login status...</span>
-        <div id="lastImport">Last import: <span id="lastImportDate"></span></div></li>
-        <li id="amazon_import_options">
-          <div id="findings_logged_out" class="hidden">
-            <span class="warning">You are currently logged out of Findings.</span>In order to auto-import your Kindle highlights, you must first login above.</a>
-          </div>
-
-          <div id="amazon_logged_in" class="hidden">
-            Import my highlights <select id="amazon_import_interval_enabled">
-                <option value="720">Once a month</option>
-                <option value="168">Once a week</option>
-                <option value="24" selected>Once a day</option>
-                <option value="12">Twice a day</option>
-                <option value="1" class="devimportopt">Every hour</option>
-                <option value=".017" class="devimportopt">Every minute</option>
-            </select>
-            <button id="import_now">import now</button>
-
-            <div><input type="checkbox" id="amazon_desktop_notifications_enabled" checked=""> Notify me when my highlights have been imported</div>
-          </div>
-
-          <div id="amazon_logged_out" class="hidden">
-            <span class="warning">You are currently logged out of Amazon.</span> In order to auto-import your Kindle highlights, you must first <a href="https://kindle.amazon.com/your_highlights" target="_blank">login to kindle.amazon.com</a>
-            <button id="refresh_options">Refresh options once logged in</button>
-          </div>
-        </li>
-      </ul>
-    </div>
-
-  </body>
+    <head>
+        <title>Findings Extension Options</title>
+        <link rel="stylesheet" href="options.css" type="text/css">
+        <script src="jquery-1.7.2.min.js"></script>
+        <script type="text/javascript" src="options.js"></script>
+    </head>
+    <body>
+        <div id="content">
+            <h2>Findings for Google Chrome</h2>
+            <div id='options'>
+                <span>Import my Kindle highlights</span>
+                <select id="amazon_import_interval">
+                    <option value="720">Once a month</option>
+                    <option value="168">Once a week</option>
+                    <option value="24" selected>Once a day</option>
+                    <option value="12">Twice a day</option>
+                    <option value="-1">Never</option>
+                    <option value="1" class="devimportopt">Every hour</option>
+                    <option value=".017" class="devimportopt">Every minute</option>
+                </select>
+                <button id="import_now">import now</button>
+                <div>
+                    <input type="checkbox" id="amazon_desktop_notifications_enabled" checked="">
+                        Show a desktop notiification when my highlights have been imported
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
